# MScThesisCatkinWorkspace

./: README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/include/example_msg_srv/: rotate_point.h  rotate_pointRequest.h  rotate_pointResponse.h  test_msg.h  test_srv.h  test_srvRequest.h  test_srvResponse.h
devel/lib/arm_angle_pub/: arm_listener
devel/lib/astrobee_test/: PointCloudListener
devel/lib/file_server/: file_server
devel/lib/pkgconfig/: arm_angle_pub.pc  astrobee_test.pc  beginner_tutorials.pc  cw1q5.pc  cw1q5_srv.pc  cw1q6d.pc  cw1q8b.pc  cw2q3.pc  cw2q4.pc  cw3_launch.pc  cw3q1.pc  cw3q2.pc  cw3q3.pc  example01.pc  example02.pc  example_msg_srv.pc  file_server.pc  iiwa_control.pc  iiwa_description.pc  iiwa_gazebo.pc  iiwa_trail_rviz_cw3.pc  kdl_kine.pc  lab02_example01.pc  lab02_example02.pc  lab02_task01.pc  lab02_task02.pc  lab02_task03.pc  lab02_task04.pc  lab03_example01.pc  lab03_example02.pc  lab03_task01.pc  lab03_task02.pc  lab03_task03.pc  lab03_task03_srv.pc  lab04_example01.pc  lab04_example02.pc  lab04_task01.pc  lab04_task02.pc  lab05_task01.pc  lab06_example01.pc  (+39 more)
devel/lib/unityPoseSubscriber/: unityListener
devel/share/arm_angle_pub/cmake/: arm_angle_pubConfig.cmake
devel/share/astrobee_test/cmake/: astrobee_testConfig.cmake
devel/share/file_server/cmake/: file_server-msg-extras.cmake  file_serverConfig.cmake
devel/share/object_recognition_node/cmake/: object_recognition_nodeConfig.cmake
devel/share/ransac_obj_rec/cmake/: ransac_obj_recConfig.cmake
src/arm_angle_pub/: CMakeLists.txt
src/arm_angle_pub/src/: arm_sub_pub.cpp
src/object_recognition_node/: CMakeLists.txt
src/object_recognition_node/src/: cluster_extraction.cpp  detailed_prev.pcd  detailed_roll.pcd  object_recocnition_node.cpp
src/unityPoseSubscriber/: CMakeLists.txt
src/unityPoseSubscriber/launch/: unity.launch
src/unityPoseSubscriber/meshes/: .model.sdf.swp  model.config  model.sdf  new_tape_roll.dae
src/unityPoseSubscriber/src/: unitySubscriber.cpp
(+63 files in other folders)
